# docs/swagger.json
@@ -395,7 +395,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.createCompanyRequest"
+                            "$ref": "#/definitions/company.createCompanyRequest"
                         }
                     }
                 ],
@@ -661,7 +661,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.joinCompanyRequest"
+                            "$ref": "#/definitions/company.joinCompanyRequest"
                         }
                     }
                 ],
@@ -774,6 +774,93 @@
                 }
             }
         },
+        "/company/quarters/add": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Adds a new quarter record for the user's company",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "company"
+                ],
+                "summary": "Add a new quarter",
+                "parameters": [
+                    {
+                        "description": "Quarter details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/company.quarterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/company/quarters/{id}": {
             "get": {
                 "description": "Lists all quarters for the specified company",
@@ -799,7 +886,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.quarterResponse"
+                                "$ref": "#/definitions/company.quarterResponse"
                             }
                         }
                     },
@@ -917,6 +1004,32 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/healthcheck": {
+            "get": {
+                "description": "Responds with status and database connectivity check.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "healthcheck"
+                ],
+                "summary": "Health Check (DB)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.healthcheckResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.healthcheckResponse"
                         }
                     }
                 }
@@ -1781,25 +1894,7 @@
         }
     },
     "definitions": {
-        "handlers.authRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "example@vnest.org"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 8,
-                    "example": "superstrongpassword"
-                }
-            }
-        },
-        "handlers.createCompanyRequest": {
+        "company.createCompanyRequest": {
             "type": "object",
             "required": [
                 "contact_email",
@@ -1818,6 +1913,74 @@
                 "name": {
                     "type": "string",
                     "example": "Acme Inc"
+                }
+            }
+        },
+        "company.joinCompanyRequest": {
+            "type": "object",
+            "required": [
+                "secret_code"
+            ],
+            "properties": {
+                "secret_code": {
+                    "type": "string",
+                    "example": "random hex"
+                }
+            }
+        },
+        "company.quarterRequest": {
+            "type": "object",
+            "required": [
+                "quarter",
+                "year"
+            ],
+            "properties": {
+                "quarter": {
+                    "type": "string",
+                    "example": "Q1"
+                },
+                "year": {
+                    "type": "integer",
+                    "example": 2024
+                }
+            }
+        },
+        "company.quarterResponse": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string",
+                    "example": "2025-04-01T00:00:00Z"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "quarter": {
+                    "type": "string",
+                    "example": "Q1"
+                },
+                "year": {
+                    "type": "integer",
+                    "example": 2025
+                }
+            }
+        },
+        "handlers.authRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "example@vnest.org"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8,
+                    "example": "superstrongpassword"
                 }
             }
         },
@@ -1866,15 +2029,16 @@
                 }
             }
         },
-        "handlers.joinCompanyRequest": {
+        "handlers.healthcheckResponse": {
             "type": "object",
-            "required": [
-                "secret_code"
-            ],
             "properties": {
-                "secret_code": {
+                "database": {
                     "type": "string",
-                    "example": "random hex"
+                    "example": "ok"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "ok"
                 }
             }
         },
@@ -1884,27 +2048,6 @@
                 "msg": {
                     "type": "string",
                     "example": "pong"
-                }
-            }
-        },
-        "handlers.quarterResponse": {
-            "type": "object",
-            "properties": {
-                "date": {
-                    "type": "string",
-                    "example": "2025-04-01T00:00:00Z"
-                },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "quarter": {
-                    "type": "string",
-                    "example": "Q1"
-                },
-                "year": {
-                    "type": "integer",
-                    "example": 2025
                 }
             }
         },
