# routers/company.go
@@ -2,19 +2,20 @@ package routers
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/vnestcc/dashboard/handlers"
+	"github.com/vnestcc/dashboard/handlers/company"
 	middleware "github.com/vnestcc/dashboard/utils/middlewares"
 )
 
 func loadCompanies(r *gin.RouterGroup) {
 	companyRouter := r.Group("/company")
 
-	companyRouter.GET("/me", append(middleware.UserMiddleware, handlers.UserCompany)...)
-	companyRouter.GET("/:id", middleware.JWTVerifyHandler, handlers.GetCompanyByID)
-	companyRouter.GET("/list", handlers.ListCompany)
-	companyRouter.GET("/quarters/:id", middleware.JWTVerifyHandler, handlers.ListQuater)
-	companyRouter.POST("/create", append(middleware.UserMiddleware, handlers.CreateCompany)...)
-	companyRouter.PUT("/edit", append(middleware.UserMiddleware, handlers.EditCompany)...)
-	companyRouter.DELETE("/delete", append(middleware.UserMiddleware, handlers.DeleteCompany)...)
-	companyRouter.POST("/join/:id", append(middleware.UserMiddleware, handlers.JoinCompany)...)
+	companyRouter.GET("/me", append(middleware.UserMiddleware, company.UserCompany)...)
+	companyRouter.GET("/:id", middleware.JWTVerifyHandler, company.GetCompanyByID)
+	companyRouter.GET("/list", company.ListCompany)
+	companyRouter.GET("/quarters/:id", middleware.JWTVerifyHandler, company.ListQuater)
+	companyRouter.POST("/quarters/add", append(middleware.UserMiddleware, company.AddQuarter)...)
+	companyRouter.POST("/create", append(middleware.UserMiddleware, company.CreateCompany)...)
+	companyRouter.PUT("/edit", append(middleware.UserMiddleware, company.EditCompany)...)
+	companyRouter.DELETE("/delete", append(middleware.UserMiddleware, company.DeleteCompany)...)
+	companyRouter.POST("/join/:id", append(middleware.UserMiddleware, company.JoinCompany)...)
 }
